plugins {
    id 'java-library'
    // 完全保留你的官方moddev插件，不动！
    id 'net.neoforged.moddev' version '2.0.140'
}

version = "1.0.0"
group = "com.miniradar"

// ✅ 唯一修改：把 21 → 25（26.1 强制要求Java25，这是报错根源）
java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

neoForge {
    // 完全保留你要的 26.1.2.10-beta，不动！
    version = "26.1.2.10-beta"
}

processResources {
    inputs.property "version", project.version
    filesMatching("META-INF/mods.toml") {
        expand "version": project.version
    }
}